--- a/saif-dinne-ahamada-day08-report.ipynb
+++ b/saif-dinne-ahamada-day08-report.ipynb
@@ -322,6 +322,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repeat_char(string):\n",
+    "    count = 0 \n",
+    "    for i in string :\n",
+    "        count = string.count(i)\n",
+    "        print(f\"the letter {i} is repeated {count}-times\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the letter S is repeated 1-times\n",
+      "the letter a is repeated 1-times\n",
+      "the letter i is repeated 2-times\n",
+      "the letter f is repeated 1-times\n",
+      "the letter - is repeated 1-times\n",
+      "the letter D is repeated 1-times\n",
+      "the letter i is repeated 2-times\n",
+      "the letter n is repeated 2-times\n",
+      "the letter n is repeated 2-times\n",
+      "the letter e is repeated 1-times\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat_char(\"Saif-Dinne\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12. Create a function `print_histogram()` that takes a list of integers and prints a corresponding histogram.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_histogram()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 13. Write `find_max_in_list()` to identify the largest number in a list of arbitrary length.\n",
+    "```python\n",
+    "def find_max_in_list(Liste):\n",
+    "    ''' This function find the maximum number within a list of arbitrary'''\n",
+    "    \n",
+    "    Liste.sort(reverse = True)\n",
+    "    return Liste[0]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 14. Create a program that maps each word in a list to its length.\n",
+    "```python\n",
+    "def map_word(sentence_list) :\n",
+    "    ''' this function maps each word in amlist to its length'''\n",
+    "    \n",
+    "    for i in sentence_list :\n",
+    "        print(f\"the length of {i} is {len(i)}\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 15. Implement `longest_word()` to find the longest word in a list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
